apps/linkding-old-cnpg/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    #TODO: hide the ip like a secret
    external-dns.alpha.kubernetes.io/target: "90.129.244.3"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkding-qa.lab.aminrj.com
      secretName: linkding-tls
  rules:
    - host: linkding-qa.lab.aminrj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 80
